--- a/themes/hugo-theme-even/layouts/partials/head.html
+++ b/themes/hugo-theme-even/layouts/partials/head.html
@@ -35,6 +35,8 @@
 <!-- Site Generator -->
 <meta name="generator" content="Hugo {{ .Hugo.Version }}" />
 
+<!-- <base href = "{{site.url}}/blog"> -->
+
 <!-- Permalink & RSSlink -->
 <link rel="canonical" href="{{ .Permalink }}" />
 {{ if .RSSLink -}}
@@ -62,7 +64,7 @@
 {{- end }}
 
 <!-- Styles -->
-<link href="dist/even.min.css" rel="stylesheet">
+<link href="{{ "dist/even.min.css?v=2.7.2" | absURL }}" rel="stylesheet">
 {{ if .Site.Params.bootcdn -}}
   {{ if .Site.Params.fancybox }}<link href="https://cdn.bootcss.com/fancybox/3.1.20/jquery.fancybox.min.css" rel="stylesheet" crossorigin="anonymous">{{ end }}
 {{- else if .Site.Params.publicCDN.enable -}}
