Render site to docs folder

--- a/themes/hugo-theme-even/layouts/partials/head.html
+++ b/themes/hugo-theme-even/layouts/partials/head.html
@@ -35,7 +35,7 @@
 <!-- Site Generator -->
 <meta name="generator" content="Hugo {{ .Hugo.Version }}" />
 
-<!-- <base href = "{{site.url}}/blog"> -->
+<!-- <base href = "\{\{site.url}}/blog"> -->
 
 <!-- Permalink & RSSlink -->
 <link rel="canonical" href="{{ .Permalink }}" />
