--- a/themes/hugo-theme-even/layouts/partials/scripts.html
+++ b/themes/hugo-theme-even/layouts/partials/scripts.html
@@ -1,5 +1,9 @@
 <!-- js -->
-<script src="{{ "lib/highlight/highlight.pack.js?v=20171001" | relURL }}"></script>
+<script src="{{ "lib/highlight/highlight.pack.js?v=20171001" | relURL }}"></script> 
+<script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
+<script> hljs.configure({languages: []}); hljs.initHighlightingOnLoad(); </script>
+
 {{ if .Site.Params.bootcdn -}}
   <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdn.bootcss.com/slideout/1.0.1/slideout.min.js" crossorigin="anonymous"></script>
