Update theme to allow datatable rendering

--- a/themes/hugo-theme-even/layouts/partials/head.html
+++ b/themes/hugo-theme-even/layouts/partials/head.html
@@ -76,6 +76,11 @@
 <link href="{{ "dist/even.min.css?v=2.7.2" | absURL }}" rel="stylesheet">
 <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css">
+<link href="{{ "lib/datatables-css-0.0.0/datatables-crosstalk.css" | relURL }}" rel="stylesheet">
+<link href="{{ "lib/dt-core-1.10.16/css/jquery.dataTables.min.css" | relURL }}" rel="stylesheet">
+<link href="{{ "lib/dt-core-1.10.16/css/jquery.dataTables.extra.css" | relURL }}" rel="stylesheet">
+<link href="{{ "lib/crosstalk-1.0.0/css/crosstalk.css" | relURL }}" rel="stylesheet">
+
 
 {{ if .Site.Params.bootcdn -}}
   {{ if .Site.Params.fancybox }}<link href="https://cdn.bootcss.com/fancybox/3.1.20/jquery.fancybox.min.css" rel="stylesheet" crossorigin="anonymous">{{ end }}
