--- a/themes/hugo-theme-even/layouts/partials/head.html
+++ b/themes/hugo-theme-even/layouts/partials/head.html
@@ -83,7 +83,7 @@
 
 
 {{ if .Site.Params.bootcdn -}}
-  {{ if .Site.Params.fancybox }}<link href="https://cdn.bootcss.com/fancybox/3.1.20/jquery.fancybox.min.css" rel="stylesheet" crossorigin="anonymous">{{ end }}
+  {{ if .Site.Params.fancybox }}<link href="https://cdnjs.cloudflare.com/fancybox/3.1.20/jquery.fancybox.min.css" rel="stylesheet" crossorigin="anonymous">{{ end }}
 {{- else if .Site.Params.publicCDN.enable -}}
   {{ if .Site.Params.fancybox }}{{ .Site.Params.publicCDN.fancyboxCss | safeHTML }}{{ end }}
 {{- else -}}
